[gd_scene load_steps=12 format=3 uid="uid://de32w2gha1wwq"]

[ext_resource type="Script" path="res://Player/Scripts/Player_Controller.gd" id="1_bktj5"]
[ext_resource type="Texture2D" uid="uid://ch5egcgabyovk" path="res://Player/Sprites/playerShip1_green.png" id="2_jyicx"]
[ext_resource type="Texture2D" uid="uid://c2p6ti8yaut44" path="res://Player/Sprites/Health Bar Empty.png" id="3_3x2jw"]
[ext_resource type="Texture2D" uid="uid://bdoc8wg0sjnwa" path="res://Player/Sprites/Health Bar.png" id="4_ydd8v"]
[ext_resource type="PackedScene" uid="uid://b51hmt07rctw8" path="res://Player/Weapons/fire_cone.tscn" id="5_n5t5v"]
[ext_resource type="Script" path="res://Player/Scripts/WaterHeal.gd" id="9_m6n74"]
[ext_resource type="Texture2D" uid="uid://bbj4sn8oei5na" path="res://Player/Sprites/shield1.png" id="10_ntksb"]
[ext_resource type="Texture2D" uid="uid://b7ajcrlsrr6g7" path="res://Player/Sprites/shield2.png" id="11_uwg73"]
[ext_resource type="Texture2D" uid="uid://dkqh48clryrcp" path="res://Player/Sprites/shield3.png" id="12_p8u3o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gjbbm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jipdo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ntksb")
}, {
"duration": 1.0,
"texture": ExtResource("11_uwg73")
}, {
"duration": 1.0,
"texture": ExtResource("11_uwg73")
}, {
"duration": 1.0,
"texture": ExtResource("12_p8u3o")
}, {
"duration": 1.0,
"texture": ExtResource("12_p8u3o")
}, {
"duration": 1.0,
"texture": ExtResource("11_uwg73")
}, {
"duration": 1.0,
"texture": ExtResource("11_uwg73")
}, {
"duration": 1.0,
"texture": ExtResource("10_ntksb")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(1059, 497)
collision_layer = 5
collision_mask = 3
motion_mode = 1
floor_snap_length = 0.0
script = ExtResource("1_bktj5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(4, 5)
shape = SubResource("CircleShape2D_gjbbm")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Base_Ship" type="Sprite2D" parent="."]
texture = ExtResource("2_jyicx")

[node name="Health_Bar_Empty" type="Sprite2D" parent="Base_Ship"]
position = Vector2(20, 0)
texture = ExtResource("3_3x2jw")

[node name="Health_Bar" type="Sprite2D" parent="Base_Ship/Health_Bar_Empty"]
position = Vector2(15, 0)
texture = ExtResource("4_ydd8v")
offset = Vector2(-15, 0)

[node name="FireCone" parent="." instance=ExtResource("5_n5t5v")]

[node name="WaterHeal" type="Node2D" parent="."]
position = Vector2(10, 0)
script = ExtResource("9_m6n74")

[node name="DarkShield" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_jipdo")
frame_progress = 0.513136
